--- a/assets/css/qutiiz.css
+++ b/assets/css/qutiiz.css
@@ -1500,10 +1500,10 @@ ul {
   background-size: cover;
   background-position: center;
   transform: scale(1);
-  opacity: 0.4;
-  background-color: var(--qutiiz-black);
+  opacity: 0;
+  /* background-color: var(--qutiiz-black); */
   background-blend-mode: luminosity;
-  transition: transform 7000ms ease, opacity 1500ms ease-in;
+  transition: transform 7000ms ease, opacity 0ms ease-in;
   z-index: 1;
 }
 
@@ -2249,7 +2249,7 @@ ul {
 }
 
 .home-showcase__image:hover>img {
-  opacity: 0.75;
+  opacity: 0;
 }
 
 .home-showcase__image:hover .home-showcase__buttons {
@@ -2303,7 +2303,7 @@ ul {
 
 .home-showcase__title {
   margin: 0;
-  color: var(--qutiiz-black);
+  /* color: var(--qutiiz-black); */
   font-size: 18px;
   font-weight: 500;
   text-transform: uppercase;
@@ -2551,7 +2551,7 @@ ul {
 .get-to-know__img {
   position: relative;
   display: block;
-  background-color: var(--qutiiz-black);
+  /* background-color: var(--qutiiz-black); */
   border-top-right-radius: 8px;
   border-bottom-right-radius: 8px;
 }
@@ -2771,11 +2771,11 @@ ul {
 
 .get-to-know__person-img {
   position: relative;
-  box-shadow: 0px 10px 30px 0px rgb(0, 0, 0, 0.1);
+  /* box-shadow: 0px 10px 30px 0px rgb(0, 0, 0, 0.1); */
   border: 5px solid #fff;
   border-radius: 50%;
   display: inline-block;
-  background-color: var(--qutiiz-black);
+  /* background-color: var(--qutiiz-black); */
 }
 
 .get-to-know__person-img img {
