--- a/assets/css/qutiiz.css
+++ b/assets/css/qutiiz.css
@@ -1508,7 +1508,7 @@ ul {
 }
 
 .main-slider .swiper-slide-active .image-layer {
-  opacity: 0.45;
+  opacity: 0.7;
 }
 
 .main-slider .container {
@@ -2833,13 +2833,13 @@ ul {
 .brand-one .swiper-slide img {
   -webkit-transition: 500ms;
   transition: 500ms;
-  opacity: 0.3;
+  /* opacity: 0.3; */
   max-width: 100%;
 }
 
-.brand-one .swiper-slide img:hover {
+/* .brand-one .swiper-slide img:hover {
   opacity: 1;
-}
+} */
 
 /*--------------------------------------------------------------
 # Project One
@@ -3287,7 +3287,7 @@ ul {
 }
 
 .why-choose-one__bottom-img img {
-  mix-blend-mode: luminosity;
+  /* mix-blend-mode: luminosity; */
   border-radius: var(--qutiiz-bdr-radius);
 }
 
@@ -3368,7 +3368,7 @@ ul {
   overflow: hidden;
   border-top-right-radius: 8px;
   border-top-left-radius: 8px;
-  background-color: var(--qutiiz-black);
+  /* background-color: var(--qutiiz-black); */
   background-blend-mode: luminosity;
 }
 
@@ -3798,8 +3798,8 @@ ul {
   background-size: cover;
   background-position: center;
   z-index: 1;
-  mix-blend-mode: luminosity;
-  opacity: 0.3;
+  /* mix-blend-mode: luminosity; */
+  opacity: 0.9;
 }
 
 .qutiiz-ready__inner {
@@ -4159,7 +4159,7 @@ ul {
 
 .tabs-content__experience-img img {
   width: auto;
-  mix-blend-mode: luminosity;
+  /* mix-blend-mode: luminosity; */
   border-radius: var(--qutiiz-bdr-radius);
 }
 
