--- a/assets/css/qutiiz.css
+++ b/assets/css/qutiiz.css
@@ -1501,14 +1501,13 @@ ul {
   background-position: center;
   transform: scale(1);
   opacity: 0;
-  /* background-color: var(--qutiiz-black); */
   background-blend-mode: luminosity;
   transition: transform 7000ms ease, opacity 0ms ease-in;
   z-index: 1;
 }
 
 .main-slider .swiper-slide-active .image-layer {
-  opacity: 0.7;
+  opacity: 0.45;
 }
 
 .main-slider .container {
@@ -2303,7 +2302,6 @@ ul {
 
 .home-showcase__title {
   margin: 0;
-  /* color: var(--qutiiz-black); */
   font-size: 18px;
   font-weight: 500;
   text-transform: uppercase;
@@ -2551,7 +2549,6 @@ ul {
 .get-to-know__img {
   position: relative;
   display: block;
-  /* background-color: var(--qutiiz-black); */
   border-top-right-radius: 8px;
   border-bottom-right-radius: 8px;
 }
@@ -2563,7 +2560,6 @@ ul {
   right: 280px;
   content: "";
   bottom: -120px;
-  background-color: #f6f4f9;
   border-bottom-right-radius: var(--qutiiz-bdr-radius);
   z-index: -1;
 }
@@ -2583,7 +2579,7 @@ ul {
   width: 100%;
   border-top-right-radius: 8px;
   border-bottom-right-radius: 8px;
-  /* mix-blend-mode: luminosity; */
+  mix-blend-mode: luminosity;
 }
 
 .get-to-know__video-link {
@@ -2771,16 +2767,14 @@ ul {
 
 .get-to-know__person-img {
   position: relative;
-  /* box-shadow: 0px 10px 30px 0px rgb(0, 0, 0, 0.1); */
+  box-shadow: 0px 10px 30px 0px rgb(0, 0, 0, 0.1);
   border: 5px solid #fff;
   border-radius: 50%;
   display: inline-block;
-  /* background-color: var(--qutiiz-black); */
 }
 
 .get-to-know__person-img img {
   border-radius: 50%;
-  /* mix-blend-mode: luminosity; */
 }
 
 .get-to-know__person-content {
@@ -2833,13 +2827,12 @@ ul {
 .brand-one .swiper-slide img {
   -webkit-transition: 500ms;
   transition: 500ms;
-  /* opacity: 0.3; */
   max-width: 100%;
 }
 
-/* .brand-one .swiper-slide img:hover {
+.brand-one .swiper-slide img:hover {
   opacity: 1;
-} */
+}
 
 /*--------------------------------------------------------------
 # Project One
@@ -2953,7 +2946,6 @@ ul {
 
 .project-one__img img {
   width: 100%;
-  /* mix-blend-mode: luminosity; */
   transition: transform 500ms ease, mix-blend-mode 500ms ease;
   border-radius: var(--qutiiz-bdr-radisu);
 }
@@ -3209,7 +3201,6 @@ ul {
 .why-choose-one__img {
   position: relative;
   display: block;
-  background-color: var(--qutiiz-black);
   border-top-left-radius: 8px;
   border-bottom-left-radius: 8px;
   overflow: hidden;
@@ -3287,7 +3278,7 @@ ul {
 }
 
 .why-choose-one__bottom-img img {
-  /* mix-blend-mode: luminosity; */
+  mix-blend-mode: luminosity;
   border-radius: var(--qutiiz-bdr-radius);
 }
 
@@ -3368,13 +3359,11 @@ ul {
   overflow: hidden;
   border-top-right-radius: 8px;
   border-top-left-radius: 8px;
-  /* background-color: var(--qutiiz-black); */
   background-blend-mode: luminosity;
 }
 
 .team-one__img img {
   width: 100%;
-  mix-blend-mode: luminosity;
   transform: scale(1);
   transition: all 500ms ease;
 }
@@ -3715,7 +3704,6 @@ ul {
   width: 65px;
   background: var(--qutiiz-white);
   border-radius: 50%;
-  color: var(--qutiiz-black);
   font-size: 20px;
   text-align: center;
   border: 0;
@@ -3784,7 +3772,6 @@ ul {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: var(--qutiiz-black);
   z-index: 1;
 }
 
@@ -3798,8 +3785,8 @@ ul {
   background-size: cover;
   background-position: center;
   z-index: 1;
-  /* mix-blend-mode: luminosity; */
-  opacity: 0.9;
+  mix-blend-mode: luminosity;
+  opacity: 1;
 }
 
 .qutiiz-ready__inner {
@@ -4156,10 +4143,9 @@ ul {
   margin-left: 50px;
   border-radius: var(--qutiiz-bdr-radius);
 }
-
+      
 .tabs-content__experience-img img {
   width: auto;
-  /* mix-blend-mode: luminosity; */
   border-radius: var(--qutiiz-bdr-radius);
 }
 
