--- a/assets/css/qutiiz.css
+++ b/assets/css/qutiiz.css
@@ -6117,7 +6117,7 @@ ul {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  background-color: var(--qutiiz-black);
+  /* background-color: var(--qutiiz-black); */
   background-blend-mode: luminosity;
   opacity: 0.4;
   z-index: -1;
